# fimi-Documentation

./: .gitignore  .gitmodules  README.md
.github/workflows/: activation.yml  build-unity.yml  develop.yml  main.yml
application/: .editorconfig  .gitignore
application/Assets/: CheckerboardScene.unity  InTrainingScene.unity
application/Assets/Materials/: ball.physicMaterial
application/Assets/Resources/: wood_Texture.mat
application/Assets/Scripts/: Bone.cs  ExternalCamera.cs  Joint.cs  Person.cs  RunLive.cs  RunLiveXNect.cs  Skeleton.cs  (+5 more)
application/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
application/WoodenMan/: .gitignore  Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  WoodenMan.CSharp.Editor.csproj
application/WoodenMan_Data/: app.info  globalgamemanagers  globalgamemanagers.assets  level0
docs/: README.md  _coverpage.md  _sidebar.md  index.html
docs/exercises/: exercises.md  squat-arm-raise.md
docs/introduction/: similar-approaches.md  training-definition.md
docs/pose-estimation/: xnect.md
docs/pose-evaluation/: pose-evaluation.md
estimator/: .gitignore
estimator-mock/: .gitignore  CMakeLists.txt
estimator-mock/src/: main.cpp
estimator-mock/src/core/: main.cpp
estimator-mock/src/domainvalue/: DelayPerData.h
estimator/cmake/: FindPackages.cmake
estimator/src/: main.cpp
evaluator/: CMakeLists.txt
evaluator-mock/: CMakeLists.txt
evaluator-mock/cmake/: FindOptionalPackages.cmake  FindPackages.cmake
evaluator-mock/src/: WebsocketServer.h  main.cpp  server.cpp
evaluator/src/: main.cpp
(+272 files in other folders)
